<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <LinearLayout
        android:id="@+id/linearLayout1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:orientation="vertical" >
        <TextView 
            android:id="@+id/username_label"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/user_notify"/>
        <TextView 
            android:id="@+id/error_box"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/error_send"/>
        <LinearLayout
            android:id="@+id/username_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
            <TextView 
            android:id="@+id/username_text"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/username_text"/>

            <EditText
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="10dp"
                android:layout_weight="4"
                android:imeOptions="actionDone"
                android:inputType="textImeMultiLine"
                android:text="@string/default_username" >

                <requestFocus />
            </EditText>

	    </LinearLayout>
	    <LinearLayout 
	        
            android:id="@+id/password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
	    <TextView 
            android:id="@+id/password_text"
            android:layout_width="wrap_content"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="@string/password_text"/>
	    <EditText
        android:id="@+id/password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_weight="7"
        android:layout_marginRight="10dp"
        android:text="@string/default_password"
        android:inputType="textPassword|textImeMultiLine"
        android:imeOptions="actionDone" >
        
    </EditText>
    </LinearLayout>

        <ProgressBar
            android:id="@+id/progressBar1"
            style="?android:attr/progressBarStyleHorizontal"
            android:layout_width="match_parent"
            android:layout_margin="20dp"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true" />
        
        <Button
            android:id="@+id/SendLocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="send_local"
            android:text="@string/send_data_to_sdcard" />

        <Button
            android:id="@+id/SendStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:onClick="send_data"
            android:text="@string/send_data_to_server" />
    </LinearLayout>

</RelativeLayout>